users api skeleton
